# gesture-control-testbed

./: .gitignore  export_onnx.py  gesture_main.py  main.py  pc_inference_server.py  pyproject.toml  remote_main.py  servo_factory.py  stream_recognized.py
commands/: __init__.py  base.py  dispatcher.py  follow_palm.py  nod_state.py  noop.py  registry.py  return_neutral.py  thumbs_up.py
gesture_control/: __main__.py  app.py  config.yaml  config_local_webcam.yaml  config_mediapipe_server.yaml  config_onnx_file.yaml  config_onnx_image.yaml  config_onnx_stream.yaml  config_remote_pi.yaml  config_tcp.yaml  config_yolo.yaml  config_yolo_image.yaml  config_yolo_video.yaml  pipeline.py  viewer.py
gesture_control/metrics/: __init__.py  logging.py  metrics.py
gesture_control/recognizers/: __init__.py  generic_recognizer.py  gesture.py  onnx_yolo.py  two_stage.py  yolo.py
gesture_control/recognizers/classifiers/: __init__.py  rule_based.py
gesture_control/recognizers/extractors/: __init__.py  mediapipe_hands.py
gesture_control/sources/: __init__.py  file.py  generic_source_config.py  image.py  registry.py  video_source.py  webcam.py
gesture_source/: __init__.py  base.py  local_recognizer_source.py  remote_inference_source.py  tcp_label_source.py
