[project]
name = "gesture_control"
version = "0.1.0"
description = "Laboratory testbed for gesture-controlled mobile platform research"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "opencv-python>=4.8",
    "mediapipe>=0.10",
    "pydantic>=2.5,<3",
    "pyyaml>=6.0",
    "ultralytics>=8.4.48"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gesture_control.*"]